# cf4ocl

./: .codecov.yml  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  Makefile.old  README.md  README.mdpp  VERSION  bitstuff.c  bitstuff.h  cf4ocl.pc.in  cf4ocl2.pc.in  clerrors.c  clerrors.h  clprofiler.c  clprofiler.h  clutils.c  clutils.h  device_query.c  gerrorf.h  index.html  kernel_info.c  params.json  plot_events.py  stuff_for_wiki.md
.github/workflows/: main.yml
.travis/: amd_sdk.sh  install_deps.sh
auxbuild/: CMakeLists.txt  buildman.sh  checktests.sh  decls_defs.sh  docfilter.sh  funlist.sh  get_data_path.c  icdtoggle.sh  listoffunctions.sh  oclfunurls.txt  parseoclfuns.sh  stringify.sh
cmake/Modules/: CodeCoverage.cmake  FindCf4ocl.cmake  FindOpenCL.cmake  Findcf4ocl2.cmake  GetVersionFromGitTag.cmake  TargetArch.cmake
docs/: 00_mainpage.md  01_userguide.md  02_tutorial.md  03_utils.md  04_funlist.md  ccl_utils.md  funlist.md  tutorial.md  userguide.md  utils.md
examples/: BankConflictTest.c  BankConflictTest.cl  Makefile  bank_conflicts.c  bank_conflicts.h  exp_common.h  matmult.c  matmult.h
lib/: Makefile  clprofiler.h  clutils.c  clutils.h
ocl/1.0/CL/: cl_gl_ext.h
ocl/1.1/CL/: cl_gl_ext.h
ocl/2.0/CL/: cl_ext.h
scripts/: CMakeLists.txt  ccl_plot_events.md  ccl_plot_events.py  plot_events.md  plot_events.py
src/: CMakeLists.txt  Makefile  Makefile.old  cf4ocl.h  cf4ocl2.h
src/cf4ocl2/: CMakeLists.txt  _ccl_abstract_dev_container_wrapper.h  _ccl_abstract_wrapper.h  _ccl_memobj_wrapper.h  abstract_dev_container_wrapper.c  abstract_dev_container_wrapper.h  abstract_wrapper.c  abstract_wrapper.h  buffer_wrapper.c  buffer_wrapper.h  ccl_abstract_dev_container_wrapper.c  ccl_abstract_dev_container_wrapper.h  ccl_abstract_wrapper.c  ccl_abstract_wrapper.h  ccl_buffer_wrapper.c  ccl_buffer_wrapper.h  ccl_common.c  ccl_common.in.h  ccl_context_wrapper.c  ccl_context_wrapper.h  ccl_device_query.c  ccl_device_selector.c  ccl_device_selector.h  ccl_device_wrapper.c  ccl_device_wrapper.h  ccl_errors.c  ccl_errors.h  ccl_event_wrapper.c  ccl_event_wrapper.h  ccl_image_wrapper.c  ccl_image_wrapper.h  ccl_kernel_arg.c  ccl_kernel_arg.h  ccl_kernel_wrapper.c  ccl_kernel_wrapper.h  ccl_memobj_wrapper.c  ccl_memobj_wrapper.h  ccl_oclversions.h  ccl_platform_wrapper.c  ccl_platform_wrapper.h  (+50 more)
src/examples/: CMakeLists.txt  Makefile  Makefile.old  bank_conflicts.c  bank_conflicts.cl  bank_conflicts.h  ca.c  ca.cl  ca.in.h  ca_mt.c  canon.c  canon.cl  canon.in.h  cellular_automata.c  device_filter.c  examples_common.c  examples_common.h  exp_common.c  exp_common.h  image_fill.c  image_filter.c  image_filter.cl  image_filter.in.h  list_devices.c  matmult.c  matmult.cl  matmult.h  stb_image.h  stb_image_write.h
src/lib/: CMakeLists.txt  Makefile  Makefile.old  _ccl_abstract_dev_container_wrapper.h  _ccl_abstract_wrapper.h  _ccl_defs.h  _ccl_kernel_wrapper.h  _ccl_memobj_wrapper.h  _g_err_macros.h  abstract_dev_container_wrapper.c  abstract_dev_container_wrapper.h  abstract_wrapper.c  abstract_wrapper.h  arg.c  arg.h  buffer.c  buffer.h  buffer_wrapper.c  buffer_wrapper.h  ccl_abstract_dev_container_wrapper.c  ccl_abstract_wrapper.c  ccl_abstract_wrapper.h  ccl_buffer_wrapper.c  ccl_buffer_wrapper.h  ccl_common.c  ccl_common.in.h  ccl_context_wrapper.c  ccl_context_wrapper.h  ccl_device_query.c  ccl_device_query.h  ccl_device_selector.c  ccl_device_selector.h  ccl_device_wrapper.c  ccl_device_wrapper.h  ccl_errors.c  ccl_errors.h  ccl_event_wrapper.c  ccl_event_wrapper.h  ccl_image_wrapper.c  ccl_image_wrapper.h  (+100 more)
src/samples/: CMakeLists.txt  canon.c  cellular_automata.c  device_filter.c  image_fill.c  image_filter.c  list.c  list_devices.c
src/tests/: CMakeLists.txt  Makefile  test.c  test.h  test.in.h  test_buffer.c  test_c.c  test_cad_context.c  test_cad_platforms.c  test_cad_profiler.c  test_cad_program.c  test_context.c  test_device.c  test_devquery.c  test_error_handling.c  test_event.c  test_gerrorf.c  test_image.c  test_kernel.c  test_op_profiler.c  test_platforms.c  test_profiler.c  test_profiler.h  test_profiler_old.c  test_profiler_op.c  test_profiler_times.c  test_program.c  test_queue.c  test_sampler.c  test_scene.c  test_wrappers.c
src/tests/kernels/: sum.cl
src/tests/mocks_stubs/profiler/: cl_stub.c  cl_stub.h
src/tests/mocks_stubs/wrappers/: cl_stub.c
src/tests/ocl_stub/: CMakeLists.txt  ocl_buffer.c  ocl_commandqueue.c  ocl_context.c  ocl_device.c  ocl_enqueue.c  ocl_env.c  ocl_env.h  ocl_event.c  ocl_image.c  ocl_impl.h  ocl_kernel.c  ocl_memobject.c  ocl_platform.c  ocl_program.c  ocl_sampler.c  utils.c  utils.h
src/utils/: CMakeLists.txt  Makefile  ccl_c.c  ccl_devinfo.c  ccl_devinfo.h  ccl_kerninfo.c  ccl_utils.h  device_query.c  device_query.h  devinfo.c  devinfo.h  kernel_info.c  kerninfo.c
tests/: CMakeLists.txt  Makefile  test.c  test_all.in.sh  test_error_handling.c  test_gerrorf.c  test_profiler.c  test_profiler.h
tests/examples/: CMakeLists.txt  test_examples.in.bats
tests/lib/: CMakeLists.txt  test.c  test.in.h  test_abstract.c  test_buffer.c  test_context.c  test_device.c  test_devquery.c  test_devsel.c  test_error_handling.c  test_errors.c  test_event.c  test_image.c  test_kernel.c  test_platforms.c  test_profiler.c  test_profiler_op.c  test_program.c  test_queue.c  test_sampler.c
tests/lib/ocl_stub/: CMakeLists.txt  ocl_buffer.c  ocl_commandqueue.c  ocl_context.c  ocl_device.c  ocl_enqueue.c  ocl_env.c  ocl_env.h  ocl_event.c  ocl_image.c  ocl_impl.h  ocl_kernel.c  ocl_memobject.c  ocl_platform.c  ocl_program.c  ocl_sampler.c  utils.c  utils.h
tests/ocl_stub/: ocl_env.h  utils.c
tests/test_kernels/: not_ok.cl  sum_full.cl  sum_impl.cl  sum_impl.cl.h  sum_needs_header.cl  sumxor_needs_two_headers.cl  xor_full.cl  xor_impl.cl  xor_impl.cl.h  xor_needs_header.cl
tests/utils/: CMakeLists.txt  test_all_devices.in.sh  test_c.bats  test_c.in.bats  test_devinfo.in.bats  test_kerninfo.in.bats
utils/: Makefile  device_query.c
